--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@
 - preserve blank lines in switch cases?
 - can't generate a: b: c when the outer object might have following inline properties eg a: {b: c}, d: e can't generate a: b: c, d: e
   similarly for eg a: -> someCall arg, b: c it needs to either always break the object if a prop value has something that could be sketchy to follow with a , or it needs to know to parenthesize the -> function
+  for eg [->, ->] it should generate [(->), ->] unless the array breaks - this would typically be the domain of pathNeedsParens() but we need to use ifParentGroupBroke()
 - would be nice if it was smart enough to not break call args where the last is the only one that breaks and is a callback-style eg:
   eq '3', ->
     something
@@ -12,7 +13,6 @@
     something
     else
   could it check whether the call without the last arg wouldn't break and the last arg is a function or do (and the call doesn't need parens)?
-- outdented commas for (adjacent) implicit objects in an array or call
 - prefix/postfix ... in splat
 - @/this, ::/.prototype
 - preserve 2e308 (or anything else that would compile to Infinity)?
@@ -22,6 +22,13 @@
 	  null
 	  'prohibit expansion and a splat'
 	)
-- this can't omit braces around nested objects when func prints inline:
-  func({prop1: {key1: 'key1'}, prop2: {key2: 'key2', key3: ['a', 'b', 'c']}})
 - option for whether to indent chaining
+- how do elisions and breaking arrays interplay?
+- where to draw the line with what to parenthesize when splatting - you can omit a lot of parens but it looks weird eg [(a if f)?.b ? []...]
+- don't need to parenthesize postfix for comprehensions (and probably other things?) when assignment breaks eg:
+  array2 =
+    (a + b for [a, b] from [[10, 20], [30, 40], [50, 60]] when a + b >= 70)
+  this is kind of similar to needing to preserve breaking in certain cases since there's a semantic difference eg a = b if null vs
+  a =
+    b if null
+  i guess you could achieve the same thing with parenthesization but seems nice to support this
