--- a/TODO
+++ b/TODO
@@ -31,3 +31,4 @@
   i guess you could achieve the same thing with parenthesization but seems nice to support this
 - revisit bracketSpacing logic
 - nicely break/indent interpolated expressions that will themselves break, eg chains are ugly
+- should it preserve tab character inside regexp?
