--- a/TODO
+++ b/TODO
@@ -33,3 +33,8 @@
 - nicely break/indent interpolated expressions that will themselves break, eg chains are ugly
 - should it preserve tab character inside regexp?
 - shouldGroupLast on heregex
+- watch out for the difference between single-property object with postfix conditional:
+  a: b if c
+  vs
+  a:
+    b if c
