--- a/TODO
+++ b/TODO
@@ -45,3 +45,7 @@
   instead of
   a =
     b: c, d: e
+- comments:
+  - preserve herecomment spacing
+  - a b, c # d is breaking, probably should preserve trailing inline comment formatting
+  - a(b, c) # d is losing the comment and not complaining
