break long when

--- a/TODO
+++ b/TODO
@@ -57,3 +57,4 @@
   - a b, c # d is breaking, probably should preserve trailing inline comment formatting
   - a(b, c) # d is losing the comment and not complaining
   - get comment-only class body to print indented
+- update to support flow() etc formatting
